@@startuml

abstract class Entity {
    - global_level static : int
    # name : string
    # health : int
    # stamina : int
    # coins : double
    # is_stunned : bool
    # level : int
    # category : string
    # CATEGORIES const static: string[]
    # MAX_NAME_SIZE const : int
    + {abstract} attack(Entity &) : void
    + print_info() const : void
    + talk() : void
    + walk() : void
}

class Human {
    + Human()
    + sell_items() : void
}

class Witcher {
    - school : WitcherSchool
    - sign : Sign
    - weapon : Weapon
    - armor : Armor
    - potions : Potion[]
    + Witcher()
    + attack(Entity &) : void
}

class Player {
    - xp_level static : int
    + interact() : void
}


abstract class Monster {
    - global_monster_level static : int
    - category : string
    + Monster()
    + attack(Entity &) : void
    + setGlobal_level() static : void
}

class Ghoul {
    - category : string
    - level : int
    + Ghoul()
    + attack(Entity &) : void
}

class Battle {
    - MAX_ALLIES const static : int
    - MAX_ENEMIES const static : int
    - allies[] : Entity*
    - enemies[] : Entity*
    + Battle(Entity &, Entity &)
    + print_allies() const : void
    + print_enemies() const : void
    + add_ally(Entity &) : void
    + add_enemy(Entity &) : void
    + check_allies() : bool
    + check_enemies() : bool
    + beginBattle() : void 
}

Entity <|-- Human
Entity <|-- Monster
Ghoul --|> Monster
Human <|-- Witcher
Player --|> Witcher

@@enduml